2dof/log/build_2025-03-17_19-25-19/pos/stderr.log
  File "/home/rohit/2dof/install/pos/lib/python3.10/site-packages/pos/service.py", line 11
    self.add_two_ints_callback
    ^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?

